# sentinel

./: .gitignore  Anchor.toml  CHANGELOG.md  PROJECT_PLAN.md  README.md  SECURITY.md  package-lock.json  package.json
programs/sentinel/: Cargo.toml
programs/sentinel/src/: lib.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: compliant-asset-demo.ts
sdk/src/: client.ts  index.ts  pdas.ts
sdk/src/idl/: sentinel.json  sentinel.ts
tests/: sentinel.ts
