[package]
name = "sentinel"
version = "0.1.0"
description = "Programmable compliance for Token-2022 tokenized assets, built on Transfer Hooks."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", features = ["token_2022"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
